tests/full-features-istio-test.yaml
---
# Source: k8ez/templates/pod-disruption-budget.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
spec:
  minAvailable: 50%
  selector:
    matchLabels:
      app: ingress-fullnameoverride
      release: test-everything-app
---
# Source: k8ez/templates/serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
---
# Source: k8ez/templates/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
type: Opaque
data:
  SECRET: dmFsdWU=
---
# Source: k8ez/templates/configmap-files.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: all-yaml
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
data:
  example-file.yaml: |-
    example-root:
      example-key: exampleValue
---
# Source: k8ez/templates/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
data:
  K8EZ: "YES"
---
# Source: k8ez/templates/pvc.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: ingress-fullnameoverride-myvolumeclaim
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
spec:
  accessModes:
  - ReadWriteMany
  storageClassName: default
  resources:
    requests:
      storage: 50Gi
---
# Source: k8ez/templates/extra-deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-extra-redis-deployment-one
  labels:
    app: ingress-fullnameoverride-extra-redis-deployment-one
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
      app: ingress-fullnameoverride-extra-redis-deployment-one
      release: test-everything-app
---
# Source: k8ez/templates/extra-deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-extra-redis-deployment-two
  labels:
    app: ingress-fullnameoverride-extra-redis-deployment-two
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
      app: ingress-fullnameoverride-extra-redis-deployment-two
      release: test-everything-app
---
# Source: k8ez/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: ingress-fullnameoverride
    release: test-everything-app
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-statefulSetWithImageString
  labels:
    app: ingress-fullnameoverride-statefulSetWithImageString
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  clusterIP: None  
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: ingress-fullnameoverride-statefulSetWithImageString
    release: test-everything-app
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-statefulSetWithImageDict
  labels:
    app: ingress-fullnameoverride-statefulSetWithImageDict
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  clusterIP: None  
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: ingress-fullnameoverride-statefulSetWithImageDict
    release: test-everything-app
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-statefulSetWithImageOnly
  labels:
    app: ingress-fullnameoverride-statefulSetWithImageOnly
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  clusterIP: None  
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: ingress-fullnameoverride-statefulSetWithImageOnly
    release: test-everything-app
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-statefulSetWithTagOnly
  labels:
    app: ingress-fullnameoverride-statefulSetWithTagOnly
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  clusterIP: None  
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: ingress-fullnameoverride-statefulSetWithTagOnly
    release: test-everything-app
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-statefulSetWithEmptyImage
  labels:
    app: ingress-fullnameoverride-statefulSetWithEmptyImage
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  clusterIP: None  
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: ingress-fullnameoverride-statefulSetWithEmptyImage
    release: test-everything-app
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-fullnameoverride-statefulSetWithoutImageInfo
  labels:
    app: ingress-fullnameoverride-statefulSetWithoutImageInfo
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  clusterIP: None  
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app: ingress-fullnameoverride-statefulSetWithoutImageInfo
    release: test-everything-app
---
# Source: k8ez/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-fullnameoverride
      release: test-everything-app
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"
        someExtraAnnotation: annotationValueHere
      labels:
        app: ingress-fullnameoverride
        release: test-everything-app
        chart: k8ez-1.0.0
        heritage: Helm
        version: 1.0.0
    spec:
      serviceAccount: ingress-fullnameoverride
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride"
          image: redis:7.2.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 80
          command: ["sh"]
          args:
          - -c
          - sleep 1000
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          volumeMounts:
            - mountPath: /mount
              name: mydir
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi
      volumes:
      - hostPath:
          path: /var/local/aaa
          type: DirectoryOrCreate
        name: mydir
---
# Source: k8ez/templates/extra-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-fullnameoverride-extra-redis-deployment-one
  labels:
    app: ingress-fullnameoverride-extra-redis-deployment-one
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-fullnameoverride-extra-redis-deployment-one
      release: test-everything-app
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        someExtraAnnotation: annotationValueHere
      labels:
        app: ingress-fullnameoverride-extra-redis-deployment-one
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      serviceAccount: ingress-fullnameoverride
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - "ingress-fullnameoverride-extra-redis-deployment-one"
                  - key: "release"
                    operator: In
                    values:
                      - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-extra-redis-deployment-one"
          image: "redis"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          command: ["sh"]
          args:
          - -c
          - sleep 1000
          env:
          - name: "ENVVAR"
            value: "value"
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          volumeMounts:
            - mountPath: /mount
              name: mydir
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/extra-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-fullnameoverride-extra-redis-deployment-two
  labels:
    app: ingress-fullnameoverride-extra-redis-deployment-two
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-fullnameoverride-extra-redis-deployment-two
      release: test-everything-app
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        someExtraAnnotation: annotationValueHere
      labels:
        app: ingress-fullnameoverride-extra-redis-deployment-two
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      serviceAccount: ingress-fullnameoverride
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - "ingress-fullnameoverride-extra-redis-deployment-two"
                  - key: "release"
                    operator: In
                    values:
                      - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-extra-redis-deployment-two"
          image: "redis"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          command: ["sh"]
          args:
          - -c
          - sleep 1000
          env:
          - name: "ENVVAR"
            value: "value"
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          volumeMounts:
            - mountPath: /mount
              name: mydir
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-fullnameoverride-statefulSetWithImageString
  labels:
    app: ingress-fullnameoverride-statefulSetWithImageString
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-fullnameoverride-statefulSetWithImageString
      release: test-everything-app
  serviceName: ingress-fullnameoverride-statefulSetWithImageString
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        annotationInfo: exclude global, include extras
        imageType: image string
        resources: custom limits (limits.memory 256Mi, requests.cpu 200m, requests.memory
          128Mi)
      labels:
        app: ingress-fullnameoverride-statefulSetWithImageString
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride-statefulSetWithImageString"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-statefulSetWithImageString"
          image: "myImageOne"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          command: ["sh"]
          args:
          - -c
          - sleep 1000
          env:
          - name: "ENVVAR"
            value: "value"
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          volumeMounts:
            - mountPath: /mount
              name: mydir
          resources:
            limits:
              memory: 256Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-fullnameoverride-statefulSetWithImageDict
  labels:
    app: ingress-fullnameoverride-statefulSetWithImageDict
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 
  selector:
    matchLabels:
      app: ingress-fullnameoverride-statefulSetWithImageDict
      release: test-everything-app
  serviceName: ingress-fullnameoverride-statefulSetWithImageDict
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        someExtraAnnotation: annotationValueHere
        annotationInfo: include global and extras
        imageType: full dictionary
      labels:
        app: ingress-fullnameoverride-statefulSetWithImageDict
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride-statefulSetWithImageDict"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-statefulSetWithImageDict"
          image: "myImageTwo:myTagTwo"
          
          imagePullPolicy: 
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-fullnameoverride-statefulSetWithImageOnly
  labels:
    app: ingress-fullnameoverride-statefulSetWithImageOnly
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 
  selector:
    matchLabels:
      app: ingress-fullnameoverride-statefulSetWithImageOnly
      release: test-everything-app
  serviceName: ingress-fullnameoverride-statefulSetWithImageOnly
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        someExtraAnnotation: annotationValueHere
        annotationInfo: include global and extras
        imageType: dictionary with image only
      labels:
        app: ingress-fullnameoverride-statefulSetWithImageOnly
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride-statefulSetWithImageOnly"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-statefulSetWithImageOnly"
          image: "separateImageOnly"
          
          imagePullPolicy: 
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-fullnameoverride-statefulSetWithTagOnly
  labels:
    app: ingress-fullnameoverride-statefulSetWithTagOnly
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 
  selector:
    matchLabels:
      app: ingress-fullnameoverride-statefulSetWithTagOnly
      release: test-everything-app
  serviceName: ingress-fullnameoverride-statefulSetWithTagOnly
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        someExtraAnnotation: annotationValueHere
        annotationInfo: include global and extras
        imageType: dictionary with tag only (should use default image with custom tag)
      labels:
        app: ingress-fullnameoverride-statefulSetWithTagOnly
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride-statefulSetWithTagOnly"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-statefulSetWithTagOnly"
          image: "redis:separateTagOnly"
          
          imagePullPolicy: 
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-fullnameoverride-statefulSetWithEmptyImage
  labels:
    app: ingress-fullnameoverride-statefulSetWithEmptyImage
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 
  selector:
    matchLabels:
      app: ingress-fullnameoverride-statefulSetWithEmptyImage
      release: test-everything-app
  serviceName: ingress-fullnameoverride-statefulSetWithEmptyImage
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        annotationInfo: exclude global, include extras
        imageType: empty dictionary (should use default)
      labels:
        app: ingress-fullnameoverride-statefulSetWithEmptyImage
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride-statefulSetWithEmptyImage"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-statefulSetWithEmptyImage"
          image: "redis:7.2.1"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-fullnameoverride-statefulSetWithoutImageInfo
  labels:
    app: ingress-fullnameoverride-statefulSetWithoutImageInfo
    chart: k8ez-1.0.0
    heritage: Helm
    release: test-everything-app
    version: 1.0.0
spec:
  replicas: 
  selector:
    matchLabels:
      app: ingress-fullnameoverride-statefulSetWithoutImageInfo
      release: test-everything-app
  serviceName: ingress-fullnameoverride-statefulSetWithoutImageInfo
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        annotationInfo: exclude global, include extras
        imageType: none included (should use default)
      labels:
        app: ingress-fullnameoverride-statefulSetWithoutImageInfo
        chart: k8ez-1.0.0
        heritage: Helm
        release: test-everything-app
        version: 1.0.0
    spec:
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - "ingress-fullnameoverride-statefulSetWithoutImageInfo"
                  - key: "release"
                    operator: In
                    values:
                    - "test-everything-app"
              topologyKey: kubernetes.io/hostname
      containers:
        - name: "ingress-fullnameoverride-statefulSetWithoutImageInfo"
          image: "redis:7.2.1"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 999
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 4000
          envFrom:
          - configMapRef:
              name: ingress-fullnameoverride
          - secretRef:
              name: ingress-fullnameoverride
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
---
# Source: k8ez/templates/jobs.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: ingress-fullnameoverride-job-example-job
  annotations:
    checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
    checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840    
    someExtraAnnotation: annotationValueHere
    jobExtraAnnotation: something
spec:
  template:
    metadata:
      annotations:
        checksum/ingress-fullnameoverride-configmap: d2e8487b65ef07e9ac4f4e3c3e2d8fe1f4e2301292e8cf72c335492a05c6d505
        checksum/ingress-fullnameoverride-secret: 51c5a4dd68fb31fbc3be79b0bf723dee4b63f09dd73a224474d8a5a6c540b840
        sidecar.istio.io/inject: "false"        
        someExtraAnnotation: annotationValueHere
        jobExtraAnnotation: something
    spec:
      serviceAccount: ingress-fullnameoverride
      enableServiceLinks: true
      securityContext:
        fsGroup: 1050
      restartPolicy: Never
      containers:
      - name: "ingress-fullnameoverride-job-example-job"
        image: "redis"
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 999
          runAsNonRoot: true
          runAsUser: 999
          seccompProfile:
            type: RuntimeDefault
        command: ["sh"]
        args:
        - -c
        - sleep 1000
        env:
        - name: "ENVVAR"
          value: "value"
        envFrom:
        - configMapRef:
            name: ingress-fullnameoverride
        - secretRef:
            name: ingress-fullnameoverride
        volumeMounts:
          - mountPath: /mount
            name: mydir
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 128Mi      
      volumes:
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
        - hostPath:
            path: /var/local/aaa
            type: DirectoryOrCreate
          name: mydir
  backoffLimit: 0
---
# Source: k8ez/templates/cronjobs.yaml
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: ingress-fullnameoverride-example-cronjob
  labels:  
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
spec:
  concurrencyPolicy: Forbid
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            sidecar.istio.io/inject: "false"
            someExtraAnnotation: annotationValueHere
        spec:
          serviceAccount: ingress-fullnameoverride
          enableServiceLinks: true
          securityContext:
            fsGroup: 1050
          containers:
            - name: example-cronjob
              image: "redis"
              imagePullPolicy: Always
              securityContext:
                allowPrivilegeEscalation: false
                capabilities:
                  drop:
                  - ALL
                privileged: false
                runAsGroup: 999
                runAsNonRoot: true
                runAsUser: 999
                seccompProfile:
                  type: RuntimeDefault
              command: ["sh"]
              args:
              - -c
              - sleep 1000
              env:
              - name: "ENVVAR"
                value: "value"
              envFrom:
              - configMapRef:
                  name: ingress-fullnameoverride
              - secretRef:
                  name: ingress-fullnameoverride
              volumeMounts:
              - mountPath: /mount
                name: mydir
              resources:
                limits:
                  memory: 512Mi
                requests:
                  cpu: 200m
                  memory: 128Mi

          restartPolicy: Never
          volumes:
          - hostPath:
              path: /var/local/aaa
              type: DirectoryOrCreate
            name: mydir

  schedule: "30 * * * *"
---
# Source: k8ez/templates/ingress-kubernetes.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fullnameoverride
  labels:
    app: ingress-fullnameoverride
    release: test-everything-app
    chart: k8ez-1.0.0
    heritage: Helm
    version: 1.0.0
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: example.local
      http:
        paths:
        - path: /
          backend:
            serviceName: ingress-fullnameoverride
            servicePort: 80
